# miniworld-maze

./: .gitignore  CLAUDE.md  INSTALLATION_STATUS.md  README.md  README_launcher.md  analyze_dependencies.py  analyze_paper_compliance.py  compare_controlled.py  compare_observations_detailed.py  drstrategy_memory_maze_usage_analysis.md  examine_step_observation.py  generate_all_variants_observations.py  generate_example_observations.py  generate_observations.py  keyboard_control_agent.py  memory_maze_modifications_analysis.md  mock_labmaze.py  nine_rooms_factory.py  nine_rooms_fully_pure_gymnasium.py  pyproject.toml  run_memory_maze.py  test_all_variants.py  test_full_memory_maze.py  test_full_working_env.py  test_memory_maze_env.py  test_new_environments.py  test_simple_memory_maze.py  test_structure_only.py
drstrategy_memory_maze/: README.md  pyproject.toml  setup.py  test_env_headless.py  test_maze_rendering.py  visualize_env.py  visualize_frames.py  visualize_web.py
drstrategy_memory_maze/drstrategy_memory_maze/: __init__.py  envs.py  maze_layouts.py
drstrategy_memory_maze/drstrategy_memory_maze.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
drstrategy_memory_maze/test_maze_frames/: create_video.sh
drstrategy_memory_maze/tests/: __init__.py  test_envs.py  test_maze_layouts.py
drstrategy_miniworld/: README.md  USAGE.md  demo.py  setup.py  test_obs_changes.py  test_oneroom.py  visualize_web.py
drstrategy_miniworld/drstrategy_miniworld/: __init__.py
drstrategy_miniworld/drstrategy_miniworld.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
examples/: basic_usage.py  benchmark_rendering.py  generate_observations.py  live_control_opencv.py  live_control_opencv_continuous.py  observation_level_demo.py  save_topdown_views.py
memory-maze-drstrategy/: README.md  compare_observations.py  keyboard_navigation.py  save_50_observations.py  setup.py
memory-maze-drstrategy/data/: four_rooms_7x7.py  four_rooms_7x7_2k.py  four_rooms_7x7_copy.py  four_rooms_coord_reset_7x7_copy.py  four_rooms_reset_7x7_copy_500_new.py  four_rooms_reset_7x7_copy_500_new.sh  four_rooms_reset_7x7_copy_new.py  four_rooms_reset_7x7_copy_new.sh  four_rooms_reset_7x7_new.py  four_rooms_reset_7x7_new.sh  four_rooms_reset_7x7_two_traversals_new.py  four_rooms_reset_7x7_two_traversals_new.sh  four_rooms_reset_7x7_two_traversals_new_probing.py  four_rooms_reset_7x7_two_traversals_new_probing_part1.sh  four_rooms_reset_7x7_two_traversals_new_probing_part2.sh  four_rooms_reset_7x7_two_traversals_new_probing_part3.sh  four_rooms_reset_7x7_two_traversals_new_test_longer_generation.py  four_rooms_reset_7x7_two_traversals_new_test_longer_generation.sh  single_room_3x3.py  single_room_coord_reset_3x3.py  single_room_reset_3x3.py  single_room_reset_3x3_new.py  ten_rooms_reset_7x19_copy_new.py  ten_rooms_reset_7x19_copy_new_part1.sh  ten_rooms_reset_7x19_copy_new_part2.sh  ten_rooms_reset_7x19_copy_new_part3.sh  ten_rooms_reset_7x19_two_traversals_new.py  ten_rooms_reset_7x19_two_traversals_new_part1.sh  ten_rooms_reset_7x19_two_traversals_new_part2.sh  twenty_rooms_reset_7x39_two_traversals_new.py  two_rooms_3x7.py  two_rooms_3x7_2k.py  (+10 more)
miniworld-drstrategy/: CLAUDE.md  LICENSE  PERFORMANCE_ANALYSIS.md  README.md  RELEASE_NOTES.md  __init__.py  generate_observations.py  nine_rooms_factory.py  pyproject.toml
miniworld-drstrategy/.github/workflows/: publish.yml
miniworld-drstrategy/examples/: README.md  benchmark_rendering.py  generate_observations.py  live_control_opencv.py
miniworld-drstrategy/miniworld_gymnasium/: entity.py
miniworld-drstrategy/miniworld_gymnasium/envs/: roomnav.py
miniworld-drstrategy/src/miniworld_drstrategy/: __init__.py  nine_rooms_factory.py
miniworld-drstrategy/src/miniworld_drstrategy/core/: __init__.py  constants.py  observation_types.py
miniworld-drstrategy/src/miniworld_drstrategy/core/miniworld_gymnasium/: base_env.py  custom_env.py  entity.py  entity_manager.py  math.py  miniworld.py  objmesh.py  occlusion_queries.py  opengl.py  params.py  random.py  rendering_engine.py  room.py  texture_utils.py  unified_env.py  wrappers.py
miniworld-drstrategy/src/miniworld_drstrategy/core/miniworld_gymnasium/entities/: __init__.py  agent.py  base_entity.py  objects.py  ui_entities.py
miniworld-drstrategy/src/miniworld_drstrategy/core/miniworld_gymnasium/envs/: __init__.py
miniworld-drstrategy/src/miniworld_drstrategy/core/miniworld_gymnasium/rendering/: __init__.py  drawing.py  framebuffer.py  texture.py
miniworld-drstrategy/src/miniworld_drstrategy/environments/: __init__.py  base_grid_rooms.py  factory.py  nine_rooms.py  spiral_nine_rooms.py  twenty_five_rooms.py
miniworld-drstrategy/src/miniworld_drstrategy/tools/: __init__.py  generate_observations.py
miniworld-drstrategy/src/miniworld_drstrategy/wrappers/: __init__.py  image_transforms.py
miniworld-drstrategy/src/miniworld_maze/environments/: __init__.py  base_grid_rooms.py
miniworld-drstrategy/src/miniworld_maze/tools/: generate_observations.py
nine-rooms-drstrategy/: README.md  keyboard_navigation.py  setup.py  test_environment.py
(+35 files in other folders)
